--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-<link rel="apple-touch-icon" href="images/icon.png"/>
-<link rel="apple-touch-startup-image" href="images/icon.png" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<link rel="apple-touch-icon" href="images/icon.png"/>
+	<link rel="apple-touch-startup-image" href="images/icon.png" />
+	
 
 <style type="text/css">
 body, div, canvas
@@ -19,6 +21,12 @@ body, html{height: 100%;}
 #outer[id]{display:table; position:static;}
 #middle{position:absolute; top:50%;} /* for ie only*/
 #middle[id]{display:table-cell; vertical-align:middle; position:static;}
+@media screen and (max-width: 980px) {
+    #container {
+        width: 100vw !important;
+        height: 100vh !important;
+    }
+}
 </style>
 
 <title>Fish Joy in HTML5</title>
